# ojoutils

./: .Rbuildignore  .Rhistory  .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  flake.nix  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.devcontainer/: devcontainer.json
R/: cli.R  comma.R  count_interval.R  county.R  describe.R  extendr-wrappers.R  fs.R  gcs.R  gh.R  limit.R  ojo-report-template.R  ojo_add_date_columns.R  ojoutils.R  package.R  percent.R  prepend_current_date.R  project.R  publish.R  stamp_date.R  template.R  zzz.R
articles/: describe-change.html  describe-change.md  index.html  index.md  project-creation.html  project-creation.md
inst/: uccs-codes.R
man/: cli_yeah.Rd  comma.Rd  count_interval.Rd  describe_change.Rd  dir_empty.Rd  gcs_auth_bucket.Rd  gcs_list_objects.Rd  gcs_read_csv.Rd  gcs_write_csv.Rd  limit.Rd  ojo_counties.Rd  ojo_create_project.Rd  ojo_list_counties.Rd  ojo_oscn_counties.Rd  ojo_parse_county.Rd  ojo_use_template.Rd  ojoutils-package.Rd  percent.Rd  prepend_current_date.Rd  stamp_date.Rd  tar_gcs_csv.Rd
news/: index.html  index.md
reference/: cli_yeah.html  cli_yeah.md  count_interval.html  count_interval.md  describe_change.html  describe_change.md  dir_empty.html  dir_empty.md  gcs_auth_bucket.html  gcs_auth_bucket.md  gcs_list_objects.html  gcs_list_objects.md  gcs_read_csv.html  gcs_read_csv.md  gcs_write_csv.html  gcs_write_csv.md  index.html  (+16 more)
src/rust/: Cargo.toml  document.rs
src/rust/src/: lib.rs
(+21 files in other folders)
