[package]
name = 'ojoutils'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'ojoutils'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
arrow_extendr = "58.0.1"
arrow = "58.0.1"
extendr-api = '0.9.0'
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
